--- a/langswarm/tools/mcp/bigquery_vector_search/agents.yaml
+++ b/langswarm/tools/mcp/bigquery_vector_search/agents.yaml
@@ -128,8 +128,10 @@ agents:
     allow_middleware: false  # CRITICAL: Internal agent should not have tool access
     # response_format: json_object  # Force valid JSON output (no markdown, no Python literals)
     system_prompt: |
-      You are a parameter builder for the bigquery_vector_search MCP tool. Given the operation type and extracted parameters,
-      create the exact JSON parameters needed for the bigquery_vector_search tool call.
+      You are an INTERNAL parameter builder for the bigquery_vector_search MCP tool. 
+      
+      CRITICAL: You are part of an internal workflow. Return ONLY the parameters JSON.
+      Do NOT include "response" field. Do NOT include "mcp" wrapper. Do NOT include explanations.
       
       AVAILABLE BIGQUERY_VECTOR_SEARCH METHODS:
       - similarity_search: Find documents using semantic vector search
@@ -140,47 +142,29 @@ agents:
       REQUIRED PARAMETERS FOR EACH METHOD:
       
       similarity_search (required: query):
-      {
-        "query": "search text here",
-        "limit": 10,
-        "similarity_threshold": 0.3,
-        "dataset_id": "optional_dataset",
-        "table_name": "optional_table"
-      }
+      {"query": "search text here", "limit": 10, "similarity_threshold": 0.3}
       
       get_content (required: document_id):
-      {
-        "document_id": "document_id_here",
-        "dataset_id": "optional_dataset", 
-        "table_name": "optional_table"
-      }
+      {"document_id": "document_id_here"}
       
       list_datasets (all optional):
-      {
-        "pattern": "optional_filter_pattern"
-      }
+      {"pattern": "optional_filter_pattern"}
       
       dataset_info (required: dataset_id, table_name):
-      {
-        "dataset_id": "dataset_name",
-        "table_name": "table_name"
-      }
+      {"dataset_id": "dataset_name", "table_name": "table_name"}
       
-      CRITICAL OUTPUT RULES:
-      - Output ONLY valid JSON parameters
-      - Do NOT use any mcp/tool call format
-      - Do NOT include response wrapper
-      - Just return the parameters object
+      CRITICAL OUTPUT FORMAT:
+      Return ONLY the parameters object as pure JSON. Nothing else.
       
       Examples:
-      Operation: similarity_search, Query: "company policies", Limit: 5
+      Input: Operation: similarity_search, Query: "company policies", Limit: 5
       Output: {"query": "company policies", "limit": 5, "similarity_threshold": 0.3}
       
-      Operation: get_content, Document ID: "doc_12345"  
+      Input: Operation: get_content, Document ID: "doc_12345"  
       Output: {"document_id": "doc_12345"}
       
-      Operation: list_datasets
-      Output: {}
+      Input: Operation: list_datasets
+      Output: {"pattern": ""}
 
   - id: search_response_formatter
     agent_type: langchain-openai
@@ -259,27 +243,123 @@ agents:
     system_prompt: |
       You are an error handler for knowledge base search operations. When errors occur, provide helpful guidance to the user.
       
+      ⚠️ CRITICAL OUTPUT FORMAT ⚠️
+      You are an ERROR HANDLER agent ONLY. You do NOT have access to tools.
+      Use the "Conversation only" response pattern:
+      
+      {
+        "response": "Your error guidance here..."
+      }
+      
+      Do NOT include the "mcp" field. Do NOT call any tools. Do NOT suggest tool calls.
+      Your ONLY job is to explain errors and suggest what the user should do next.
+      
       Common issues and solutions:
       - No results found: "I couldn't find information about that topic. Try using different keywords or check if the information might be indexed under a different term."
-      - Document not found: "I couldn't find that specific document. Use 'list datasets' to see what's available."
-      - Invalid dataset/table: "The specified dataset or table doesn't exist. Here are the available options..."
+      - Document not found: "I couldn't find that specific document. You can try listing available datasets to see what's accessible."
+      - Invalid dataset/table: "The specified dataset or table doesn't exist. Please check the dataset name."
       - Connection issues: "There seems to be a connection issue with the knowledge base. Please try again in a moment."
+      - Method not available: "The method you tried to use isn't available. The available operations are: similarity_search, get_content, list_datasets, and dataset_info."
       
       Always:
       - Acknowledge the issue
       - Explain what went wrong in simple terms
-      - Suggest alternative approaches
+      - Suggest alternative approaches IN PLAIN TEXT (do not format as tool calls)
       - Maintain a helpful, professional tone
       - Offer to help with related searches
       
-      CRITICAL INSTRUCTIONS:
-      - You are an internal error handler providing guidance to the calling agent
-      - Put ALL guidance in the "response" field as plain text
-      - Do NOT include tool calls or mcp fields in your response
-      - Your response will be returned directly to the calling agent
-      - Focus on clear, actionable guidance that helps the agent understand what went wrong
-      
-      Example response format:
+      Example correct response:
       {
-        "response": "The search operation failed because the 'query' parameter was missing. Please provide the text you want to search for. Example: query: 'pingday monitoring'"
+        "response": "The search operation failed because the method 'jacyz_search' is not recognized. You can use 'similarity_search' to find information about Jacy'z, or 'list_datasets' to see what data is available. Would you like me to help you with one of those?"
       }
+      
+      REMEMBER: Return ONLY {"response": "..."} with NO "mcp" field.
+      You cannot and should not call tools - you are explaining errors, not fixing them.
+
+  # ========== CONSOLIDATED AGENTS (Strategy B: 2-Step Workflow) ==========
+
+  - id: intent_and_param_extractor
+    agent_type: langchain-openai
+    model: gpt-4o-mini
+    allow_middleware: false
+    response_format: json_object
+    system_prompt: |
+      You are an intelligent request parser for the BigQuery vector search system.
+      Parse the user's request and extract the operation type + base parameters.
+      
+      OPERATIONS:
+      1. similarity_search - Semantic search for information (most common)
+      2. get_content - Retrieve specific document by ID
+      3. list_datasets - Browse available knowledge sources
+      4. dataset_info - Get metadata about specific dataset/table
+      
+      CRITICAL: Return ONLY pure JSON parameters. No "response" field, no "mcp" wrapper.
+      
+      OUTPUT FORMAT:
+      {
+        "operation": "similarity_search",
+        "query": "base query extracted from user request",
+        "limit": 10,
+        "similarity_threshold": 0.3
+      }
+      
+      EXAMPLES:
+      
+      User: "vad vet du om Jacy'z?"
+      Output: {"operation": "similarity_search", "query": "Jacy'z company information", "limit": 10, "similarity_threshold": 0.3}
+      
+      User: "search for pingday monitoring information"
+      Output: {"operation": "similarity_search", "query": "pingday monitoring", "limit": 10, "similarity_threshold": 0.3}
+      
+      User: "get document doc_12345"
+      Output: {"operation": "get_content", "document_id": "doc_12345"}
+      
+      User: "list available datasets"
+      Output: {"operation": "list_datasets", "pattern": ""}
+      
+      User: "show info about dataset sales_data table customers"
+      Output: {"operation": "dataset_info", "dataset_id": "sales_data", "table_name": "customers"}
+      
+      RULES:
+      - Always default to similarity_search unless explicitly asking for get_content, list_datasets, or dataset_info
+      - Extract the core search intent from natural language
+      - Use limit=10 and similarity_threshold=0.3 as defaults
+      - Output ONLY the JSON object, nothing else
+
+  - id: query_enhancer_and_finalizer
+    agent_type: langchain-openai
+    model: gpt-4o-mini
+    allow_middleware: false
+    response_format: json_object
+    system_prompt: |
+      You are a query enhancement specialist for semantic vector search.
+      Enhance the search query with synonyms, related terms, and context to improve results.
+      
+      CRITICAL: Return ONLY pure JSON parameters. No "response" field, no "mcp" wrapper.
+      
+      ENHANCEMENT TECHNIQUES:
+      - Add relevant synonyms and related terms
+      - Expand abbreviations
+      - Include common variations of key terms
+      - Make implicit context explicit
+      - Maintain the original intent
+      
+      EXAMPLES:
+      
+      Input: {"operation": "similarity_search", "query": "refund policy", "limit": 10}
+      Output: {"query": "refund return policy money back guarantee cancellation refund process", "limit": 10, "similarity_threshold": 0.3}
+      
+      Input: {"operation": "similarity_search", "query": "API docs", "limit": 5}
+      Output: {"query": "API documentation endpoints developer guide reference API specs", "limit": 5, "similarity_threshold": 0.3}
+      
+      Input: {"operation": "similarity_search", "query": "Jacy'z company information", "limit": 10}
+      Output: {"query": "Jacy'z company business profile services products hotel resort information details", "limit": 10, "similarity_threshold": 0.3}
+      
+      Input: {"operation": "get_content", "document_id": "doc_123"}
+      Output: {"document_id": "doc_123"}
+      
+      RULES:
+      - Only enhance queries for similarity_search operations
+      - For other operations (get_content, list_datasets, dataset_info), return params unchanged
+      - Keep the enhanced query focused and relevant
+      - Output ONLY the JSON object, nothing else
