--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "langswarm"
-version = "0.0.54.dev105"
-# langswarm-v0.0.54.dev105
+version = "0.0.54.dev106"
+# langswarm-v0.0.54.dev106
 # Tag format: langswarm-v{version}
 description = "A multi-agent ecosystem for large language models (LLMs) and autonomous systems."
 readme = "README.md"
@@ -25,6 +25,10 @@ cerberus = "^1.3.7"
 tiktoken = "^0.9.0"
 google-cloud-pubsub = "*"
 simpleeval = "^1.0.3"
+litellm = "^1.52.0"
+
+# Observability
+langfuse = {version = "^2.53.0", optional = true}
 
 # AI/ML dependencies
 langchain-community = "^0.3.24"
@@ -70,6 +74,10 @@ daytona = {version = "^0.10.5", optional = true}
 google-cloud-bigquery = {version = "^3.0.0", optional = true}
 google-cloud-bigquery-storage = {version = "^2.0.0", optional = true}
 
+# Google Workspace integration
+google-api-python-client = {version = "^2.118.0", optional = true}
+google-auth-oauthlib = {version = "^1.2.0", optional = true}
+
 # OpenTelemetry integration
 opentelemetry-api = {version = "^1.21.0", optional = true}
 opentelemetry-sdk = {version = "^1.21.0", optional = true}
@@ -99,6 +107,15 @@ opentelemetry = [
   "opentelemetry-exporter-prometheus",
   "opentelemetry-instrumentation",
 ]
+observability = [
+  "langfuse",
+]
+  "opentelemetry-instrumentation",
+]
+google-workspace = [
+  "google-api-python-client",
+  "google-auth-oauthlib",
+]
 all = [
   "google-cloud-bigquery",
   "google-cloud-bigquery-storage", 
@@ -109,6 +126,8 @@ all = [
   "opentelemetry-exporter-jaeger",
   "opentelemetry-exporter-prometheus",
   "opentelemetry-instrumentation",
+  "google-api-python-client",
+  "google-auth-oauthlib",
 ]
 
 [build-system]
