--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,12 @@
-# LangSwarm Environment Variables
+# OpenAI Configuration
+OPENAI_API_KEY=sk-...
 
-# ===========================
-# LLM Provider API Keys
-# ===========================
+# Gemini Configuration
+# Get your key at: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=AI...
 
-# OpenAI
-OPENAI_API_KEY=your-openai-key-here
-
-# Anthropic Claude
-# ANTHROPIC_API_KEY=your-anthropic-key-here
-
-# Google Gemini
-# GOOGLE_API_KEY=your-google-api-key-here
-# GEMINI_API_KEY=your-gemini-api-key-here
-
-# Cohere
-# COHERE_API_KEY=your-cohere-key-here
-
-# Mistral
-# MISTRAL_API_KEY=your-mistral-key-here
-
-# Hugging Face
-# HUGGINGFACE_API_KEY=your-huggingface-key-here
-
-# ===========================
-# Observability & Tracing
-# ===========================
-
-# LangFuse - Automatic Observability
-# Uncomment these to enable automatic tracing and prompt management
-# Get your keys at: https://cloud.langfuse.com
-# LANGFUSE_PUBLIC_KEY=pk-lf-...
-# LANGFUSE_SECRET_KEY=sk-lf-...
-# LANGFUSE_HOST=https://cloud.langfuse.com  # Optional, defaults to cloud instance
-
-# ===========================
-# Optional Configuration
-# ===========================
-
-# Redis (for distributed memory)
-# REDIS_URL=redis://localhost:6379
-
-# Google Cloud (for BigQuery, Pub/Sub, etc.)
-# GOOGLE_APPLICATION_CREDENTIALS=/path/to/credentials.json
+# Langfuse Observability
+# Get your keys at: https://cloud.langfuse.com/
+LANGFUSE_PUBLIC_KEY=pk-lf-...
+LANGFUSE_SECRET_KEY=sk-lf-...
+LANGFUSE_HOST=https://cloud.langfuse.com
