--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "langswarm"
-version = "0.0.54.dev117"
-# langswarm-v0.0.54.dev117
+version = "0.0.54.dev118"
+# langswarm-v0.0.54.dev118
 # Tag format: langswarm-v{version}
 description = "A multi-agent ecosystem for large language models (LLMs) and autonomous systems."
 readme = "README.md"
@@ -15,7 +15,7 @@ keywords = ["LLM", "multi-agent", "langchain", "hugginface", "openai", "MCP", "a
 python = ">=3.8,<4.0"
 
 # Memory system
-langswarm-memory = "^0.1.2"
+langswarm-memory = "^0.1.3"
 
 # Core dependencies
 pyyaml = "^6.0.2"
@@ -28,7 +28,7 @@ simpleeval = "^1.0.3"
 litellm = "^1.74.0"
 
 # Observability
-langfuse = {version = "^2.53.0", optional = true}
+langfuse = {version = ">=2.53.0,<3.0.0", optional = true}
 
 # AI/ML dependencies
 langchain-community = "^0.3.24"
