--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = ["Alexander Ekdahl <alexander.ekdahl@gmail.com>"]
 license = "MIT"
 homepage = "https://github.com/aekdahl/langswarm"
 repository = "https://github.com/aekdahl/langswarm"
-keywords = ["LLM", "multi-agent", "langchain", "hugginface", "openai", "MCP", "agent", "orchestration"]
+keywords = ["LLM", "multi-agent", "huggingface", "openai", "MCP", "agent", "orchestration", "langswarm", "autonomous"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
