--- a/langswarm-memory/pyproject.toml
+++ b/langswarm-memory/pyproject.toml
@@ -34,7 +34,7 @@ keywords = ["AI", "agents", "memory", "conversation", "LLM", "chatbot"]
 # Core backends
 redis = ["redis>=4.0.0"]
 bigquery = ["google-cloud-bigquery>=3.0.0"]
-postgres = ["asyncpg>=0.27.0"]
+postgres = ["asyncpg>=0.27.0", "pgvector>=0.2.0"]
 mongodb = ["motor>=3.0.0"]
 elasticsearch = ["elasticsearch[async]>=8.0.0"]
 
@@ -49,6 +49,7 @@ all-backends = [
     "redis>=4.0.0",
     "google-cloud-bigquery>=3.0.0",
     "asyncpg>=0.27.0",
+    "pgvector>=0.2.0",
     "motor>=3.0.0",
     "elasticsearch[async]>=8.0.0",
 ]
@@ -62,6 +63,7 @@ all = [
     "redis>=4.0.0",
     "google-cloud-bigquery>=3.0.0",
     "asyncpg>=0.27.0",
+    "pgvector>=0.2.0",
     "motor>=3.0.0",
     "elasticsearch[async]>=8.0.0",
     "numpy>=1.20.0",
